se modifico el titulo

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Prueba de Git</title>
 </head>
 <body>
-    <h1>Titulo de Primer Nivel</h1>
+    <h1>Titulo de Primer Nivel modificado</h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt expedita
          nemo quis exercitationem temporibus voluptatibus unde obcaecati in neque? 
          Atque quos, quidem labore alias ipsa obcaecati debitis soluta illum similique
