se agregaron titulos de nivel 2 y 3

--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
            Nesciunt eos quam porro tempora ea reiciendis doloribus est perferendis.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus cum deserunt 
         necessitatibus. Porro rerum voluptatem similique nam facere reiciendis nisi.</p>
+
+        <h2>Titulo</h2>
+        <h3>Titulo</h3>
 </body>
 </html>
