Se añadio parrafo y titulo

--- a/index.html
+++ b/index.html
@@ -23,5 +23,9 @@
            Nesciunt eos quam porro tempora ea reiciendis doloribus est perferendis.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatibus cum deserunt 
         necessitatibus. Porro rerum voluptatem similique nam facere reiciendis nisi.</p>
+        <div>
+            <h1>esto es un titulo de Primer nivel</h1>
+            <p>Saludos <br> Gente Bonita</p>
+        </div>
 </body>
 </html>
